--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,82 @@
 body {
     background-color: aliceblue;
+
+    background-image: url("../assets/kitchen.jpg");
+    background-size: cover;
+}
+
+
+header {
+    height: 100px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+button {
+    margin: 20px;
+
+    height: 50px;
+    width: 80px;
+    border-radius: 5px;
+    border: 2px solid black;
+    background-color: white;
+}
+
+#content {
+
+    width: 100%;
+
+    min-height: 80vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    color: white;
+    font-size: 4rem;
+    font-weight: 700;
+    text-shadow: 3px 3px 2px black;
+}
+
+p {
+    color: white;
+    text-shadow: 3px 3px 2px black;
+    font-weight: 700;
+    font-size: 1rem;
+}
+
+li {
+    color: white;
+    text-shadow: 3px 3px 2px black;
+    font-weight: 700;
+    font-size: 2rem;
+
+    margin: 20px;
+}
+
+footer {
+    height: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: white;
+
+    font-size: 1rem;
+
+}
+
+a {
+    color: aliceblue;
+}
+
+#aboutP {
+    font-size: 2rem;
 }
