--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+
+    font-family: 'Roboto';
+}
+
 body {
     background-color: aliceblue;
 
@@ -16,13 +24,19 @@ header {
 }
 
 button {
-    margin: 20px;
+    margin: 40px;
 
-    height: 50px;
-    width: 80px;
-    border-radius: 5px;
+    height: 60px;
+    width: 100px;
+    border-radius: 10px;
+    border: none;
     border: 2px solid black;
     background-color: white;
+
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+
+    font-weight: 500;
+    font-size: 1rem;
 }
 
 #content {
@@ -77,6 +91,7 @@ a {
     color: aliceblue;
 }
 
-#aboutP {
+.aboutP {
     font-size: 2rem;
+    margin-top: 25px;
 }
